src/test/ui/parser/macro-bad-delimiter-ident.stderr
error: expected open delimiter
  --> $DIR/macro-bad-delimiter-ident.rs:2:10
   |
LL |     foo! bar <
   |          ^^^ expected open delimiter

error: aborting due to previous error

