src/test/ui/parser/macro-bad-delimiter-ident.rs
fn main() {
    foo! bar < //~ ERROR expected open delimiter
}
